SERVER-36948 fix incorrect usage of StatusWith<T> in biggie storage engine